# JunJun_Agent

./: .env.example  .gitignore  LICENSE  README.md  art.html  art.txt  continua.html  continua.txt  gemini_cot.html  issue10883.json  issue10883_comments.json  muca.html  muca.txt  pyproject.toml
config/: bot_config.toml  bot_config.toml.example  mcp_servers.toml  model_config.toml
docs/: 00_总目标.md  Langfuse排障.md  使用指南.md  回归记录.md  踩坑清单与常见Bug.md  阶段0_骨架搭建.md  阶段1_接入链路打通.md  阶段2_Agent最小可用.md  阶段3_会话与拟人化回复.md  阶段4_记忆与画像.md  阶段5_表达与主动系统.md  阶段6_MCP与插件.md  阶段7_WebUI与收尾.md  验收报告_2026-07-21.md
junjun_adapter_napcat/: __init__.py  com_layer.py  config.py  config.toml  logger.py  main.py  message_sending.py  pyproject.toml  response_pool.py
junjun_adapter_napcat/recv_handler/: __init__.py  message_handler.py  meta_event_handler.py  notice_handler.py
junjun_adapter_napcat/send_handler/: __init__.py  main_send_handler.py  nc_sending.py
junjun_agent/: __init__.py  agent.py  commands.py  interceptors.py  processor.py  pyproject.toml
junjun_agent/funnel/: __init__.py  frequency.py  llm_gate.py  rule_gate.py  session_queue.py
junjun_agent/loop/: __init__.py  proactive.py  reminder.py  repeat.py  scheduler.py  statistics.py
junjun_agent/persona/: __init__.py
junjun_agent/postprocess/: __init__.py  splitter.py  typo.py
junjun_core/: __init__.py  contracts.py  napcat_client.py  pyproject.toml  security.py
junjun_core/config/: __init__.py  config.py
junjun_core/database/: __init__.py  cleanup.py  models.py  writer.py
junjun_core/gateway/: __init__.py  blacklist.py  rate_limit.py  router.py  session_manager.py
junjun_core/observability/: __init__.py  langfuse_client.py  logger.py
junjun_express/: __init__.py  emoji.py  expression.py  intimacy.py  jargon.py  mood.py  pyproject.toml  reflector.py
junjun_llm/: __init__.py  models.py  pyproject.toml  tracing.py
junjun_mcp_client/: __init__.py  client.py  pyproject.toml
junjun_mcp_server/: __init__.py  pyproject.toml  relationship_mcp_server.py
junjun_memory/: __init__.py  embedding.py  knowledge.py  long_term.py  pyproject.toml  short_term.py  summarizer.py  user_profile.py  vision.py
junjun_skills/: __init__.py  plugin_loader.py  pyproject.toml  registry.py
junjun_skills/builtin/: action_skills.py  capability_skills.py  do_not_reply.py  express_skills.py  get_time.py  knowledge_skills.py  memory_skills.py  reminder_skills.py
junjun_skills/plugins/ai_draw/: __init__.py  _manifest.json  tools.py
junjun_skills/plugins/bilibili/: __init__.py  _manifest.json  tools.py
junjun_skills/plugins/chat_frequency/: __init__.py  _manifest.json  tools.py
junjun_skills/plugins/chat_screenshot/: __init__.py  _manifest.json  tools.py
junjun_skills/plugins/cross_scene/: __init__.py  _manifest.json  tools.py
junjun_skills/plugins/douyin/: __init__.py  _manifest.json  tools.py
junjun_skills/plugins/emoji_manage/: __init__.py  _manifest.json  tools.py
junjun_skills/plugins/google_search/: __init__.py  _manifest.json  tools.py
junjun_skills/plugins/google_search/engines/: __init__.py  google.py
junjun_skills/plugins/google_search/translators/: nbnhhsh.py
junjun_skills/plugins/image_viewer/: __init__.py  _manifest.json  tools.py
junjun_skills/plugins/intimacy/: __init__.py  _manifest.json  tools.py
junjun_skills/plugins/ja_tts/: __init__.py  _manifest.json  tools.py
junjun_skills/plugins/jrys/: __init__.py  _manifest.json  tools.py
junjun_skills/plugins/lolicon_setu/: __init__.py  _manifest.json  tools.py
junjun_skills/plugins/maizone/: __init__.py  _manifest.json  tools.py
junjun_skills/plugins/music/: __init__.py  _manifest.json  tools.py
junjun_skills/plugins/netdisk/: __init__.py  _manifest.json  tools.py
junjun_skills/plugins/news/: __init__.py  _manifest.json  tools.py
junjun_skills/plugins/pixiv_novel/: __init__.py  _manifest.json  config.toml.example  tools.py
junjun_skills/plugins/topic_finder/: __init__.py  _manifest.json  tools.py
junjun_skills/plugins/tts/: __init__.py  _manifest.json  doubao_tts.py  tools.py
junjun_skills/plugins/vrchat_agent/: _manifest.json  anya_client.py  config.toml  pose_library.py  tools.py
junjun_skills/plugins/wife/: __init__.py  _manifest.json  tools.py
junjun_webui/: __init__.py  pyproject.toml  server.py
junjun_webui/static/: index.html
langfuse/: docker-compose.yml
scripts/: fix_remaining.py  run_adapter.py  run_junjun.py  smoke_agent.py  smoke_memory.py  test_e2e_fake_napcat.py  test_echo_client.py  test_private_self.py
tests/: conftest.py  test_action_skills.py  test_contracts_memory.py  test_deviations_fixed.py  test_frequency.py  test_llm_gate.py  test_memory.py  test_migration_infra.py  test_mood_reminder.py  test_plugin_ai_draw.py  test_plugin_bilibili.py  test_plugin_chat_screenshot.py  test_plugin_douyin.py  test_plugin_emoji_manage.py  test_plugin_ja_tts.py  test_plugin_jrys.py  test_plugin_maizone.py  test_plugin_music.py  test_plugin_netdisk.py  test_plugin_pixiv_novel.py  test_plugin_topic_finder.py  test_plugin_tts.py  test_plugin_w1.py  test_plugin_w3.py  test_postprocess.py  test_processor.py  test_profile_jargon.py  test_registry.py  test_rule_gate.py  test_security.py  test_stage5.py  test_stage6.py  test_stage7_fixes.py  test_webui.py
