[project]
name = "junjun-adapter-napcat"
version = "0.1.0"
description = "QQ ????NapCat WS?"
requires-python = ">=3.11"
dependencies = [
    "maim-message",
    "websockets"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["junjun_adapter_napcat"]
