[project]
name = "junjun-agent"
version = "0.1.0"
description = "Agent 核心：LangChain 编排"
requires-python = ">=3.11"
dependencies = [
    "langchain",
    "junjun-core",
    "junjun-llm",
    "junjun-memory",
    "junjun-skills"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["junjun_agent"]
