[project]
name = "junjun-core"
version = "0.1.0"
description = "?? + ?? + ??? + ???"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv",
    "tomlkit",
    "structlog",
    "rich",
    "peewee",
    "maim-message"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["junjun_core"]
