[project]
name = "junjun-express"
version = "0.1.0"
description = "情绪/表情/黑话"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "httpx",
    "junjun-core"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["junjun_express"]
