[project]
name = "junjun-llm"
version = "0.1.0"
description = "LLM 抽象层"
requires-python = ">=3.11"
dependencies = [
    "langchain-openai",
    "langfuse",
    "openai"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["junjun_llm"]
