[project]
name = "junjun-mcp-server"
version = "0.1.0"
description = "MCP server (relationship)"
requires-python = ">=3.11"
dependencies = ["mcp", "junjun-core", "junjun-memory"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["junjun_mcp_server"]
