[project]
name = "junjun-memory"
version = "0.1.0"
description = "????"
requires-python = ">=3.11"
dependencies = [
    "faiss-cpu",
    "numpy",
    "peewee",
    "junjun-core"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["junjun_memory"]
