[project]
name = "junjun-skills"
version = "0.1.0"
description = "Agent Skill ???"
requires-python = ">=3.11"
dependencies = [
    "langchain-core",
    "pydantic"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["junjun_skills"]
