[project]
name = "junjun-skills"
version = "0.1.0"
description = "Agent Skill 注册表"
requires-python = ">=3.11"
dependencies = [
    "langchain-core",
    "httpx",
    "beautifulsoup4",
    "aiohttp",
    "pydantic",
    "pykakasi",
    "websockets",
    "Pillow",
    "feedparser"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["junjun_skills"]
